--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 *.tmp
 *.ldb
 /cmh/webapp/nbproject/private/
+/cmh/testlib/nbproject/private/
+/cmh/testlib/build/
+/cmh/WebApplication1/nbproject/private/
