--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.BL.UnitTests/CheekiBreeki.CMH.Terminal.BL.UnitTests.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.BL.UnitTests/CheekiBreeki.CMH.Terminal.BL.UnitTests.csproj
@@ -65,6 +65,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestAccionesTerminal.cs" />
+    <Compile Include="TestUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
