--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.BL/CheekiBreeki.CMH.Terminal.BL.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.BL/CheekiBreeki.CMH.Terminal.BL.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReporteCaja.cs" />
     <Compile Include="ResultadoVerificacionSeguro.cs" />
+    <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
