--- a/cmh/terminal/Cheekibreeki.CMH.Seguro.DAL/Cheekibreeki.CMH.Seguro.DAL.csproj
+++ b/cmh/terminal/Cheekibreeki.CMH.Seguro.DAL/Cheekibreeki.CMH.Seguro.DAL.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,11 +56,64 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AFILIADO.cs">
+      <DependentUpon>SeguroModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BENEFICIO.cs">
+      <DependentUpon>SeguroModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EMPRESA.cs">
+      <DependentUpon>SeguroModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PLAN.cs">
+      <DependentUpon>SeguroModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PRESTACION.cs">
+      <DependentUpon>SeguroModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeguroModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SeguroModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SeguroModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SeguroModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SeguroModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SeguroModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="T_EMPRESA.cs">
+      <DependentUpon>SeguroModel.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <EntityDeploy Include="SeguroModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>SeguroModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="SeguroModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>SeguroModel.edmx</DependentUpon>
+      <LastGenOutput>SeguroModel.Context.cs</LastGenOutput>
+    </None>
+    <None Include="SeguroModel.edmx.diagram">
+      <DependentUpon>SeguroModel.edmx</DependentUpon>
+    </None>
+    <None Include="SeguroModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>SeguroModel.edmx</DependentUpon>
+      <LastGenOutput>SeguroModel.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
