--- a/cmh/terminal/Cheekibreeki.CMH.Seguro.WS/Cheekibreeki.CMH.Seguro.WS.csproj
+++ b/cmh/terminal/Cheekibreeki.CMH.Seguro.WS/Cheekibreeki.CMH.Seguro.WS.csproj
@@ -52,6 +52,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Cheekibreeki.CMH.Seguro.BL\Cheekibreeki.CMH.Seguro.BL.csproj">
+      <Project>{1eae83d4-3782-4824-8bbf-139c5a55fadb}</Project>
+      <Name>Cheekibreeki.CMH.Seguro.BL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <VSToolsPath Condition="'$(VSToolsPath)' == '' and '$(VisualStudioVersion)' != '' and '$(VisualStudioVersion)' != '11.0'">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
