--- a/cmh/terminal/Cheekibreeki.CMH.Seguro.WS/Cheekibreeki.CMH.Seguro.WS.csproj
+++ b/cmh/terminal/Cheekibreeki.CMH.Seguro.WS/Cheekibreeki.CMH.Seguro.WS.csproj
@@ -47,6 +47,8 @@
   <ItemGroup>
     <Compile Include="ISeguroWS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeguroRequest.cs" />
+    <Compile Include="SeguroResponse.cs" />
     <Compile Include="SeguroWS.cs" />
   </ItemGroup>
   <ItemGroup>
