--- a/cmh/terminal/Cheekibreeki.CMH.Terminal.BL.Testing/Cheekibreeki.CMH.Terminal.BL.Testing.csproj
+++ b/cmh/terminal/Cheekibreeki.CMH.Terminal.BL.Testing/Cheekibreeki.CMH.Terminal.BL.Testing.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeguroWSTest.cs" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
