--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.DAL/CheekiBreeki.CMH.Terminal.DAL.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.DAL/CheekiBreeki.CMH.Terminal.DAL.csproj
@@ -64,6 +64,12 @@
     <Compile Include="ATENCION_AGEN.cs">
       <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ATENCION_AGENDADA.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BANCO.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="BONO.cs">
       <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
@@ -88,6 +94,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CMHModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="CUEN_BANCARIA.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DEVOLUCION.cs">
       <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
@@ -100,7 +109,13 @@
     <Compile Include="ESPECIALIDAD.cs">
       <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ESP_PER_MEDICO.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="ESTADO_ATEN.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ESTADO_ATENCION.cs">
       <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="FICHA.cs">
@@ -132,6 +147,9 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RES_ATENCION.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TIPO_C_BANCARIA.cs">
       <DependentUpon>CMHModel.tt</DependentUpon>
     </Compile>
     <Compile Include="TIPO_EQUIPO.cs">
