--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.DAL/App.config
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.DAL/App.config
@@ -39,5 +39,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" /><add name="Enti3" connectionString="metadata=res://*/CMHModel.csdl|res://*/CMHModel.ssdl|res://*/CMHModel.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost:1521/XE;PASSWORD=dev;PERSIST SECURITY INFO=True;USER ID=DEV&quot;" providerName="System.Data.EntityClient" /><add name="CMHEntities" connectionString="metadata=res://*/CMHModel.csdl|res://*/CMHModel.ssdl|res://*/CMHModel.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost:1521/XE;PASSWORD=dev;PERSIST SECURITY INFO=True;USER ID=DEV&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />
+    <add name="CMHEntities" connectionString="metadata=res://*/CMHModel.csdl|res://*/CMHModel.ssdl|res://*/CMHModel.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;data source=SUSHI:1521/XE;password=dev;persist security info=True;user id=DEV&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
