--- a/cmh/terminal/CheekiBreeki.CMH.Terminal.DAL/CheekiBreeki.CMH.Terminal.DAL.csproj
+++ b/cmh/terminal/CheekiBreeki.CMH.Terminal.DAL/CheekiBreeki.CMH.Terminal.DAL.csproj
@@ -55,6 +55,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ASEGURADORA.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ATENCION_AGEN.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BANCO.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BLOQUE.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BONO.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CAJA.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CARGO.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="CMHModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -70,7 +91,73 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CMHModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="CUEN_BANCARIA.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DEVOLUCION.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DIA_SEM.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ENTRADA_FICHA.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EQUIPO_REQ.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ESPECIALIDAD.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ESTADO_ATEN.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FUNCIONARIO.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="HORARIO.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="INVENTARIO.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ORDEN_ANALISIS.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PACIENTE.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PAGO.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PERSONAL.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PERS_MEDICO.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PRESTACION.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RES_ATENCION.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TIPO_C_BANCARIA.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TIPO_EQUIPO.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TIPO_FICHA.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TIPO_PRES.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TURNO.cs">
+      <DependentUpon>CMHModel.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
