--- a/cmh/servPago/nbproject/project.properties
+++ b/cmh/servPago/nbproject/project.properties
@@ -27,14 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/servpago.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.log4j-1.2.17.jar=lib\\log4j-1.2.17.jar
 file.reference.ojdbc7.jar=lib\\ojdbc7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc7.jar}:\
     ${reference.cmhlib.jar}:\
-    ${file.reference.log4j-1.2.17.jar}
+    ${file.reference.ojdbc7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
